<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.activities.fragments.CheckPermissionFragment">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_70"
        android:layout_marginStart="@dimen/large"
        android:layout_marginEnd="@dimen/large"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/sp_25"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:layout_marginEnd="@dimen/large"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="@dimen/sp_25"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DeviceInfoDialogValue"
        android:paddingBottom="@dimen/dp_0"
        android:text="@string/check_permission_tip"
        android:layout_margin="@dimen/large"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/large"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:layout_marginStart="@dimen/large"
            android:layout_marginEnd="@dimen/large">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/es_layout"
                app:cardCornerRadius="@dimen/dp_12">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/large">

                    <ImageView
                        android:layout_width="@dimen/large"
                        android:layout_height="@dimen/large"
                        android:src="@drawable/ic_permission_file"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/large"
                            style="@style/TextAppearance.Material3.TitleMedium"
                            android:text="@string/permission_external_storage"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/large"
                            style="@style/TextAppearance.Material3.LabelMedium"
                            android:text="@string/permission_external_storage_tips"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:id="@+id/es_checkBox"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/dp_12"
                android:id="@+id/ms_layout"
                android:layout_marginTop="@dimen/small">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/large">

                    <ImageView
                        android:layout_width="@dimen/large"
                        android:layout_height="@dimen/large"
                        android:src="@drawable/ic_permission_file"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/large"
                            style="@style/TextAppearance.Material3.TitleMedium"
                            android:text="@string/permission_manage_external_storage"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/large"
                            style="@style/TextAppearance.Material3.LabelMedium"
                            android:text="@string/permission_manage_external_storage_tips"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:id="@+id/ms_checkBox"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginTop="@dimen/large"
        android:layout_marginBottom="@dimen/extra_large"
        android:id="@+id/start"
        android:text="@string/start"/>

</androidx.appcompat.widget.LinearLayoutCompat>